fix chevron error on mobile size

--- a/statics/css/contact_us.css
+++ b/statics/css/contact_us.css
@@ -63,7 +63,7 @@ svg.contact-item:hover {
 }
 
 .overlap-bottom {
-  margin-bottom: -1px;
+  margin-bottom: -2px;
 }
 
 .overlap-top {
